# android-opencv-dlib-facelandmark

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/administrator/facelandmark_test/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/dlib/: Makefile  cmake_install.cmake  config.h  dlib-1.pc
app/src/main/cpp/dlib/all/: source.cpp
app/src/main/cpp/dlib/cmake_utils/test_for_cudnn/: CMakeLists.txt
app/src/main/cpp/dlib/config/: dlibConfig.cmake  dlibConfigVersion.cmake
app/src/main/cpp/dlib/cpp11_test_build/: CMakeCache.txt  Makefile  cmake_install.cmake
app/src/main/cpp/dlib/image_transforms/: random_cropper.h
app/src/main/java/com/example/administrator/facelandmark_test/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/administrator/facelandmark_test/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
